--- a/xCubeApplication/App.xaml
+++ b/xCubeApplication/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:xCubeApplication"
-             StartupUri="MainWindow.xaml">
+             Startup="Application_Startup" ShutdownMode="OnMainWindowClose" Exit="Application_Exit">
     <Application.Resources>
          
     </Application.Resources>
